# agent-lab

./: .bandit.yml  .dockerignore  .env.example  .mutmut-config.py  .roomodes  AGENTS.md  CHANGELOG.md  Dockerfile  GUIDE.md  PRD.md  README.md  SECURITY.md  TDD-chain.md  TRD.md  acceptance-criteria.md  app.py  architecture.md  backup-strategy.md  bandit-report.json  benchmark_parameter_optimizer.py  complexity-notes.md  dashboards-alerting-rules.md  docker-compose.yml  fix_keyboard.py  force-push.ps1  function-specs.md  incident-playbooks.md  integration-report.md  monitoring-alerting.md  noxfile.py  performance_benchmark.py  phase1_validation.sh  phase3_validation.sh  phase4_validation.sh  pip-audit-report.json  pseudocode-conftest.md  pseudocode-implementation-flow.md  pseudocode-pytest-ini.md  pseudocode-readme.md  pseudocode-test-structure.md  (+22 more)
.github/: dependabot.yml
.github/workflows/: data-backup.yml  deploy.yml  disaster-recovery-test.yml  health-monitoring.yml  mutation-testing.yml  pipeline.yml  repository-backup.yml  rollback.yml  security.yml  test-rollback.yml  tests.yml
agents/: cost.py  models.py  runtime.py  tools.py
data/: .gitkeep  parameter_patterns.json  runs.csv
data/sessions/: .gitkeep  0caa16b9-fcfd-4526-8cd1-fa246e4f5502.json  117002ab-1fab-4aaa-adfb-164176ef4735.json  1676d542-7d13-4fd6-be95-4db92da1e90c.json  20962e81-4106-4604-ba7d-09599fb945a9.json  25af1328-ee85-4f94-9992-e6083dfc38c4.json  2a45fc4c-759f-464f-823a-c724399266e6.json  31b53436-f04d-49f1-9bd1-f766b096238b.json  36cda3a1-b605-4714-a53b-8220721606c8.json  383daaf1-ac73-4b3e-a027-7022baebfe93.json  38f202aa-4df1-4754-96d0-40d3efcabea2.json  3969717c-e800-46c3-87a5-0f36a2784d48.json  3c0c79b4-753d-46cc-aa95-6ec5daae02be.json  3e04bc78-630a-4476-958c-1d47c58ad8d3.json  3f5579d3-3763-44e5-9e03-2989124d5e94.json  4be7321f-8b8d-4224-93cf-ff612ab00a14.json  4d0d95cd-b03e-48ef-b4f1-ed99f3f6d4f8.json  507df419-4fca-42ee-b755-bccedbab51c1.json  5218967d-872b-4f08-accb-ca13d9d55e71.json  58845f46-069a-42d9-9228-629d773d20c8.json  6090d059-17f3-46f5-84b2-28b790a6158a.json  (+39 more)
docs/: design-system.md  keyboard_shortcuts.md  observability.md  personas-flows-phase2.md  ux-phase2-summary.md  ux-strategy.md  wireframes-phase2.md
memory-bank/: decisionLog.md  progress.md  qualityMetrics.md  systemPatterns.md
schemas/: build.schema.json  plan.schema.json  release.schema.json  test.schema.json
scripts/: emit_build_handoff.py  improve_test_names.py  migrate_to_pytest_mock.py  release_gate.py  validate_json.py
services/: catalog.py  persist.py
src/: cli.py  main.py  parsers.py
tests/: CONTRIBUTING.md  README.md  __init__.py  conftest.py
(+120 files in other folders)
